Fix Java 11 issues